Fix text-align title-desc

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -186,6 +186,7 @@ header {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        text-align: center;
     }
 
     .title-desc {
